--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,18 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+
     <color name="white">#FFFFFFFF</color>
+
+//Sams frames
+    <color name="primary">#95F1FF</color>
+    <color name="black">#FF000000</color>
+    <color name="DarkBG">#121212</color>
+    <color name="CallWidgetBorder">#858585</color>
+    <color name="neutral5">#0E1212</color>
+    <color name="on_background">#191C1C</color>
+    <color name="tertiary">#006874</color>
+
 </resources>
