--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="on_tertiary">#00363D</color>
-    <color name="neutral_20">#2D3131</color>
+    <color name="neutral_20">#191C1C</color>
     <color name="neutral_40">#5C5F5F</color>
+
     <color name="tertiary_40">#006874</color>>
 </resources>
