--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,12 +9,13 @@
     <color name="primary">#95F1FF</color>
     <color name="DarkBG">#121212</color>
     <color name="CallWidgetBorder">#858585</color>
-    <color name="neutral5">#0E1212</color>
+    <color name="neutral_5">#0E1212</color>
     <color name="on_background">#191C1C</color>
     <color name="tertiary">#006874</color>
 
 //pushkars frames
     <color name="on_tertiary">#00363D</color>
+    <color name="neutral_10">#191C1C</color>
     <color name="neutral_20">#2D3131</color>
     <color name="neutral_40">#5C5F5F</color>
     <color name="tertiary_40">#006874</color>
