--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -5,10 +5,10 @@
     <dimen name="Profile_banner_height">136dp</dimen>
     <dimen name="profile_picture_height">86dp</dimen>
 
-    <dimen name="main_padding">20.dp</dimen>
-    <dimen name="text_field_height">68.dp</dimen>
-    <dimen name="generic_button_height">56.dp</dimen>
-    <dimen name="top_bar_height">64.dp</dimen>
-    <dimen name="small_profile_pic_dim">40.dp</dimen>
+    <dimen name="main_padding">20dp</dimen>
+    <dimen name="text_field_height">68dp</dimen>
+    <dimen name="generic_button_height">56dp</dimen>
+    <dimen name="top_bar_height">64dp</dimen>
+    <dimen name="small_profile_pic_dim">40dp</dimen>
 
 </resources>
