--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_padding">20.dp</dimen>
-    <dimen name="text_field_height">68.dp</dimen>
-    <dimen name="generic_button_height">56.dp</dimen>
-    <dimen name="top_bar_height">64.dp</dimen>
-    <dimen name="small_profile_pic_dim">40.dp</dimen>
+    <dimen name="main_padding">20dp</dimen>
+    <dimen name="text_field_height">68dp</dimen>
+    <dimen name="generic_button_height">56dp</dimen>
+    <dimen name="top_bar_height">64dp</dimen>
+    <dimen name="small_profile_pic_dim">40dp</dimen>
+
+<!--  font sizes  -->
+    <dimen name="top_bar_font">24sp</dimen>
+
 </resources>
