--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
+
     <style name="Theme.PartyUp" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:windowBackground">#000000</item>
-        <item name="android:windowSplashScreenIconBackgroundColor" tools:targetApi="s">#000000</item>
+        <item name="android:windowSplashScreenIconBackgroundColor">#000000</item>
     </style>
 </resources>
